PWA Styles: fix --view-gutter on mobile

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -47,7 +47,7 @@ html, body {
 // slightly larger menu on small screens
 @media screen and (max-width:699px), screen and (max-height:699px) {
 
-    :root.mobile html {
+    :root.mobile {
         --view-gutter: 1em;
     }
     
